--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ bcrypt==3.2.0
 email-validator==1.1.3
 requests==2.31.0
 PyMuPDF==1.21.1
-python-docx==0.8.11 
+python-docx==0.8.11
+gunicorn==20.1.0
+gevent==23.9.1
+psycopg2-binary==2.9.9 
